# blog-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024_initial_schema/: up.sql
src/: lib.rs  main.rs
src/models/: user.rs
src/tests/: health_check.rs
tests/: health_check.rs
