[package]
name = "blog_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = "0.4.39"
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version =  "1.0.217" , features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.12.1"
validator = "0.20.0"
